--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,14 @@
   color: black;
   background-color: #ffc9a3;
 }
+
+.newActivityButton {
+  background: darkblue;
+  color: white;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+  margin-right: 10px;
+  margin-left: 10px;
+  padding:10px;
+}
