--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,32 @@
   margin-left: 10px;
   padding:10px;
 }
+
+.tile {
+  height: 50px;
+  width: 150px;
+  margin: 10px;
+  background: #70877f;
+  float: left;
+  font-size: 14px;
+  /*text-align: left;*/
+}
+
+.input {
+  border: 0;
+  background: none;
+  outline: none;
+  margin-top:10px;
+  width: 200px;
+  font-size: 14px;
+}
+
+.input:focus {
+  border: solid 1px lightgrey;
+}
+
+textarea {
+  resize: none;
+  height: 90px;
+  font-size: 14px;
+}
