adding comments about whats going on with the updateActivity method

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   height: 50px;
   width: 150px;
   margin: 10px;
-  background: #70877f;
+  background: #c4a77d;
   float: left;
   font-size: 14px;
   /*text-align: left;*/
