Notes and delete button styling

--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,19 @@ textarea {
   height: 90px;
   font-size: 14px;
 }
+
+.deleteButton {
+    visibility: hidden;
+    float: right;
+    width: 30px;
+    height: 30px;
+    padding: 6px 0px;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 1.42857;
+}
+
+.tile:hover .deleteButton {
+  visibility: visible;
+}
