--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 .App {
   text-align: center;
-  padding: 10px;
-  height: 100%;
+  padding: 0.1%;
   color: black;
-  background-color: #ffc9a3;
+  /*background-color: #ffc9a3;*/
 }
 
 .nav {
@@ -12,15 +11,8 @@
   margin: 1%;
 }
 
-.newActivityButton {
-  background: darkblue;
-  color: white;
-  border: none;
-  font-size: 18px;
-  cursor: pointer;
-  margin-right: 10px;
-  margin-left: 10px;
-  padding:10px;
+.welcome {
+  height: 100%;
 }
 
 .activities {
@@ -33,26 +25,22 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  /*flex-direction: column;*/
-  /*flex: 1 10%;*/
-  flex-basis: 50%;
-  /*float: inherit;*/
 }
 
 .activity-tile {
   margin: 1%;
   padding: 1%;
+  /*font-size: 14px;*/
+  width: 320px;
   background: #C0EAF0;
-  font-size: 14px;
-  width: 300px;
 }
 
 .edit-title-input {
   border: 0;
-  background: #C0EAF0;
+  background: white;
   outline: none;
   margin-top:10px;
-  width: 200px;
+  width: 250px;
   font-size: 14px;
 }
 
@@ -82,4 +70,15 @@ textarea {
 .activity-tile:hover .deleteButton {
   visibility: visible;
   cursor: default;
+}
+
+.newActivityButton {
+  background: darkblue;
+  color: white;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+  margin-right: 10px;
+  margin-left: 10px;
+  padding:10px;
 }
