--- a/src/App.css
+++ b/src/App.css
@@ -30,22 +30,25 @@
 .activity-tile {
   margin: 1%;
   padding: 1%;
-  /*font-size: 14px;*/
   width: 320px;
   background: #C0EAF0;
 }
 
 .edit-title-input {
   border: 0;
-  background: white;
+  background: #C0EAF0;
   outline: none;
   margin-top:10px;
-  width: 250px;
-  font-size: 14px;
+  width: 220px;
+  text-align: center;
+  font-size: 1.5em;
+  font-family: sans-serif;
+  padding: 2%;
+  margin: 2%;
 }
 
 .edit-title-input:focus {
-  border: solid 1px lightgrey;
+  border: solid 1px black;
   background: white;
 }
 
@@ -72,13 +75,37 @@ textarea {
   cursor: default;
 }
 
+.newActivityForm{
+  border: 2px solid #e3fd9b;
+  /*width: 400px;*/
+  padding: 1%;
+  margin: 1%;
+}
+
+.newActivityInput{
+  width: 250px;
+  /*margin: 10px auto;*/
+  padding: 0.5%;
+  font-size: 14px;
+
+}
+
+.activityButton{
+  padding: 1%;
+}
+
 .newActivityButton {
-  background: darkblue;
-  color: white;
+  background: #d9ffb4;
+  color: black;
   border: none;
   font-size: 18px;
   cursor: pointer;
   margin-right: 10px;
   margin-left: 10px;
   padding:10px;
+  opacity: 0.7;
+}
+
+.newActivityButton:hover {
+  opacity: 1;
 }
