--- a/src/App.css
+++ b/src/App.css
@@ -75,26 +75,29 @@ textarea {
   cursor: default;
 }
 
-.newActivityForm{
+.Form {
   border: 2px solid #e3fd9b;
   /*width: 400px;*/
-  padding: 1%;
+  padding: 10px;
   margin: 1%;
+  font-size: 18px;
 }
 
-.newActivityInput{
+
+
+.FormInput {
   width: 250px;
   /*margin: 10px auto;*/
   padding: 0.5%;
-  font-size: 14px;
-
+  font-size: 18px;
+  margin: 1%;
 }
 
-.activityButton{
+.Button{
   padding: 1%;
 }
 
-.newActivityButton {
+.submitButton {
   background: #d9ffb4;
   color: black;
   border: none;
@@ -106,6 +109,6 @@ textarea {
   opacity: 0.7;
 }
 
-.newActivityButton:hover {
+.submitButton:hover {
   opacity: 1;
 }
