--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,14 @@
 
 .welcome {
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+}
+
+.chart {
+  margin: 25px;
 }
 
 .activities {
