--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,33 @@
 }
 
 .nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   background: #f9fa6a;
   padding: 1%;
   margin: 1%;
+  border: 4px solid #5D4954;
+}
+
+.navlink {
+  display: flex;
+  font-size: 1.5em;
+  padding: 1%;
+}
+
+a:link, a:visited {
+  background-color: #a8fbfc;
+  color: black;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  /*display: inline-block;*/
+}
+
+a:hover {
+  color: black;
+  background-color: #a8c0fc;
 }
 
 .welcome {
@@ -67,15 +91,15 @@ textarea {
 }
 
 .deleteButton {
-    visibility: hidden;
-    float: right;
-    width: 30px;
-    height: 30px;
-    padding: 6px 0px;
-    border-radius: 15px;
-    text-align: center;
-    font-size: 12px;
-    line-height: 1.42857;
+  visibility: hidden;
+  float: right;
+  width: 30px;
+  height: 30px;
+  padding: 6px 0px;
+  border-radius: 15px;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.42857;
 }
 
 .activity-tile:hover .deleteButton {
