--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 .nav {
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
   justify-content: center;
   background: #f9fa6a;
   padding: 1%;
@@ -18,19 +18,23 @@
 .navlink {
   display: flex;
   font-size: 1.5em;
-  padding: 1%;
+  padding: 0.5%;
 }
 
-a:link, a:visited {
+a {
   background-color: #a8fbfc;
-  color: black;
   padding: 14px 25px;
   text-align: center;
   text-decoration: none;
-  /*display: inline-block;*/
+  color: black;
 }
 
 a:hover {
+  color: black;
+  background-color: #a8c0fc;
+}
+
+.active {
   color: black;
   background-color: #a8c0fc;
 }
